--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-pager-view": "^6.4.1",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.6.0"
+    "react-native-svg": "^15.6.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
